refactor: rename agent to fusion
